--- a/public/user.html
+++ b/public/user.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Home</title>
+    <title>User</title>
     <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,12 +18,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">OSBB App</a>
+          <a class="navbar-brand" href="#">Project name</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Home</a></li>
-            <li><a href="/user.html">User</a></li>
+            <li><a href="/">Home</a></li>
+            <li class="active"><a href="/user.html">User</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
           <form class="navbar-form navbar-right" role="search">
